info adding to contact.txt but making new list each time